traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:14: error: not found: type string
  do{ecritMessage(mark:string)
                       ^